crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__nested_do.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        x <- do\n            y <- action\n            pure y\n        pure x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 15,
        },
    },
    value: Do {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 19,
                    },
                },
                value: Bind {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    expr: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 4,
                                column: 19,
                            },
                        },
                        value: Do {
                            stmts: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 24,
                                        },
                                    },
                                    value: Bind {
                                        pattern: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 14,
                                                },
                                            },
                                            value: Var(
                                                "y",
                                            ),
                                        },
                                        expr: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 24,
                                                },
                                            },
                                            value: Var {
                                                kind: LowVar,
                                                name: "action",
                                            },
                                        },
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 19,
                                    },
                                },
                                value: Call {
                                    function: Located {
                                        region: Region {
                                            start: Position {
                                                line: 4,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 4,
                                                column: 17,
                                            },
                                        },
                                        value: Var {
                                            kind: LowVar,
                                            name: "pure",
                                        },
                                    },
                                    arguments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 19,
                                                },
                                            },
                                            value: Var {
                                                kind: LowVar,
                                                name: "y",
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                    },
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 9,
                },
                end: Position {
                    line: 5,
                    column: 15,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 9,
                        },
                        end: Position {
                            line: 5,
                            column: 13,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "pure",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 14,
                            },
                            end: Position {
                                line: 5,
                                column: 15,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                ],
            },
        },
    },
}
