crates/nash-parse/src/expression/snapshots/nash_parse__expression__do___tests__single_expression.snap
---
source: crates/nash-parse/src/expression/do_.rs
description: "Code (indented inside a def):\n\n    do\n        pure 1\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 2,
            column: 15,
        },
    },
    value: Do {
        stmts: [],
        last: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 9,
                },
                end: Position {
                    line: 2,
                    column: 15,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 13,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "pure",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                ],
            },
        },
    },
}
